<resources>
    <string name="app_name">StoreApp</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="contrasena">Contraseña</string>
    <string name="email_data">prueba@prueba.com</string>
    <string name="password_data">123456</string>
    <string name="agregar_producto">Agregar Producto</string>
    <string name="imagen_del_producto">Imagen del producto</string>
    <string name="resgistro">Resgistro</string>
    <string name="registrarse">Registrarse</string>
    <string name="agregar_usuario">Agregar Usuario</string>
    <string name="nombre">Nombre</string>
    <string name="documento">Documento</string>
    <string name="url_foto">Url Foto</string>
    <string name="editar">Editar</string>
    <string name="regresar">Regresar</string>
    <string name="agregar_prodcuto">Agregar Prodcuto</string>
    <string name="crear">Crear</string>
    <string name="descripcion">Descripcion</string>
    <string name="url_imagen">Url imagen</string>
    <string name="precio">Precio</string>
    <string name="editar_producto">Editar Producto</string>
    <string name="txt_logout">Cerrar Sesión</string>
    <string name="error_sign_up">Error al crear el usuario</string>
</resources>