<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="view_model"
            type="com.example.storeapp.viewModel.UserFormActivityViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".view.UserFormActivity">

            <ImageView
                android:id="@+id/iv_logo_user_form"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title_user_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="16dp"
                android:text="@string/resgistro"
                android:textAlignment="center"
                android:textColor="?attr/colorPrimary"
                android:textSize="24sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_logo_user_form" />

            <EditText
                android:id="@+id/et_name_user_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:hint="@string/nombre"
                android:inputType="text"
                android:text="@={view_model.user.name}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_user_form" />

            <EditText
                android:id="@+id/et_document_user_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:hint="@string/documento"
                android:inputType="text"
                android:text="@={view_model.user.document}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_name_user_form" />

            <EditText
                android:id="@+id/et_email_user_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:text="@={view_model.user.email}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_document_user_form" />

            <EditText
                android:id="@+id/et_password_user_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:hint="@string/contrasena"
                android:inputType="textPassword"
                android:text="@={view_model.user.password}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_email_user_form" />

            <EditText
                android:id="@+id/et_photo_url_user_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:hint="@string/url_foto"
                android:inputType="textUri"
                android:text="@={view_model.user.photoUrl}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_password_user_form" />


            <Button
                android:id="@+id/bt_sing_up_user_form"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="64dp"
                android:text="@string/registrarse"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_photo_url_user_form" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>