<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="view_model"
            type="com.example.storeapp.viewModel.ProductAddActivityViewModel" />

        <import type="com.example.storeapp.utils.BindingUtilsKt"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".view.ProductAddActivity">


            <ImageView
                android:id="@+id/iv_product_form"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background"
                app:image="@{view_model.product.urlImage}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_product_form" />

            <TextView
                android:id="@+id/tv_title_product_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="16dp"
                android:text="@string/agregar_prodcuto"
                android:textAlignment="center"
                android:textColor="?attr/colorPrimary"
                android:textSize="24sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_name_product_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:hint="@string/nombre"
                android:inputType="text"
                android:text="@={view_model.product.name}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_product_form" />

            <EditText
                android:id="@+id/et_price_product_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:hint="@string/precio"
                android:inputType="number"
                android:text="@={BindingUtilsKt.intToString(view_model.product.price)}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_name_product_form" />

            <EditText
                android:id="@+id/et_url_image_product_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:hint="@string/url_imagen"
                android:inputType="textUri"
                android:text="@={view_model.product.urlImage}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_price_product_form" />

            <EditText
                android:id="@+id/et_description_product_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:hint="@string/descripcion"
                android:inputType="textMultiLine"
                android:text="@={view_model.product.description}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_url_image_product_form" />


            <Button
                android:id="@+id/bt_add_product_form"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/crear"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_description_product_form" />

            <Button
                android:id="@+id/bt_return_product_form"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/regresar"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bt_add_product_form" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>